@@ -196,6 +196,8 @@ tests/reexport-m3.scm
 tests/reexport-m4.scm
 tests/reexport-m5.scm
 tests/reexport-m6.scm
+tests/reexport-m7.scm
+tests/reexport-m8.scm
 tests/reexport-tests.scm
 tests/reexport-tests-2.scm
 tests/ec.scm
