@@ -330,6 +330,10 @@ if errorlevel 1 exit /b 1
 if errorlevel 1 exit /b 1
 %compile_s% reexport-m6.scm -J
 if errorlevel 1 exit /b 1
+%compile_s% reexport-m7.scm -J
+if errorlevel 1 exit /b 1
+%compile_s% reexport-m8.scm -J
+if errorlevel 1 exit /b 1
 %compile% reexport-tests-2.scm
 if errorlevel 1 exit /b 1
 a.out
